syntax = "proto3";

package product.v1;

option go_package = "github.com/tshubham2/catalog-proj/proto/product/v1;productv1";

import "google/protobuf/timestamp.proto";

service ProductService {
  // Commands
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ArchiveProduct(ArchiveProductRequest) returns (ArchiveProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);

  // Queries
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

// --- Commands ---

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  string base_price = 4; // decimal string, e.g. "19.99"
}

message CreateProductReply {
  string product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {}

message ArchiveProductRequest {
  string product_id = 1;
}

message ArchiveProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  string percentage = 2; // whole-number percentage, e.g. "20"
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {}

// --- Queries ---

message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  Product product = 1;
}

message ListProductsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string category = 3; // optional filter
}

message ListProductsReply {
  repeated ProductSummary products = 1;
  string next_page_token = 2;
}

// --- Shared messages ---

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string base_price = 5;
  string effective_price = 6;
  optional string discount_percent = 7;
  string status = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message ProductSummary {
  string id = 1;
  string name = 2;
  string category = 3;
  string base_price = 4;
  string effective_price = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
}
